--- a/index.css
+++ b/index.css
@@ -5,7 +5,10 @@
     padding: 0;
     box-sizing: border-box;
     font-family: 'Open Sans', sans-serif;
-    /*background: #f5f6fa;*/
+}
+
+body {
+    background: #f5f6fa;
 }
 
 header {
