--- a/index.css
+++ b/index.css
@@ -4,7 +4,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: 'Open Sans', sans-serif;
+    font-family: Open Sans, sans-serif;
 }
 
 body {
@@ -19,51 +19,61 @@ header {
     align-items: center;
 }
 
+header img {
+    width: 30px;
+    height: 30px;
+    background-color: white;
+
+}
+
 aside {
     background: rgb(5, 68, 104);
     position: fixed;
     top: 10vh;
     left: 0;
-    width: 225px;
+    width: 16%;
     height: 100%;
     padding: 20px 0;
     transition: all 0.5s ease;
 }
 
-.sidebar .profile {
-    margin-bottom: 30px;
-    text-align: center;
-}
+/*.sidebar .profile {*/
+/*    margin-bottom: 30px;*/
+/*    text-align: center;*/
+/*}*/
 
-.sidebar .profile img {
-    display: block;
-    width: 100px;
-    height: 100px;
-    border-radius: 50%;
-    margin: 0 auto;
-    background-color: white;
-}
+/*.sidebar .profile img {*/
+/*    display: block;*/
+/*    width: 100px;*/
+/*    height: 100px;*/
+/*    border-radius: 50%;*/
+/*    margin: 0 auto;*/
+/*    background-color: white;*/
+/*}*/
 
-.sidebar .profile h3 {
-    color: #ffffff;
-    margin: 10px 0 5px;
-}
+/*.sidebar .profile h3 {*/
+/*    color: #ffffff;*/
+/*    margin: 10px 0 5px;*/
+/*}*/
 
-.sidebar .profile p {
-    color: rgb(206, 240, 253);
-    font-size: 14px;
-}
+/*.sidebar .profile p {*/
+/*    color: rgb(206, 240, 253);*/
+/*    font-size: 14px;*/
+/*}*/
 
 .sidebar ul li a {
     display: block;
-    padding: 13px 30px;
+    width: 100%;
+    padding: 13px 0;
+    text-align: center;
     border-bottom: 1px solid #10558d;
     color: rgb(241, 237, 237);
     font-size: 16px;
     position: relative;
+    text-decoration: none;
 }
 
-.sidebar ul li a .icon {
+.sidebar ul li a #svg {
     color: #dee4ec;
     width: 30px;
     display: inline-block;
@@ -72,17 +82,20 @@ aside {
 .sidebar ul li a:hover,
 .sidebar ul li a.active {
     color: #0c7db1;
-
     background: white;
     border-right: 2px solid rgb(5, 68, 104);
 }
 
-.sidebar ul li a:hover .icon,
-.sidebar ul li a.active .icon {
+.sidebar ul li a:hover .svg,
+.sidebar ul li a.active .svg {
     color: #0c7db1;
 }
 
 .sidebar ul li a:hover:before,
 .sidebar ul li a.active:before {
     display: block;
+}
+
+main {
+    margin: 11vh 0 0 18vw;
 }
