update index.html and index.css

--- a/index.css
+++ b/index.css
@@ -15,7 +15,7 @@ header {
     height: 10vh;
     width: 100%;
     display: flex;
-    background: rgb(5, 68, 104);
+    background: #348cd4;
     align-items: center;
 }
 
