--- a/index.css
+++ b/index.css
@@ -101,6 +101,7 @@ main {
     margin: 10vh 0 0 16vw;
     padding: 20px 0 0 20px;
 }
+
 header .dropdown-menu {
     position: absolute;
     top: 10vh;
@@ -120,3 +121,16 @@ header .dropdown-menu {
 header #Addnew {
     margin-left: -650px;
 }
+
+ header .badge {
+     display: inline-block;
+     padding: 0.25em 0.4em;
+     font-size: .75em;
+     font-weight: 700;
+     line-height: 1;
+     color: #fff;
+     text-align: center;
+     white-space: nowrap;
+     vertical-align: baseline;
+     border-radius: 0.25rem;
+ }
