--- a/Login/LoginPage.css
+++ b/Login/LoginPage.css
@@ -1,23 +1,15 @@
-
-.gradient-custom-2 {
-    /* fallback for old browsers */
-    background: #fccb90;
-
-    /* Chrome 10-25, Safari 5.1-6 */
-    background: -webkit-linear-gradient(to right, #ee7724, #d8363a, #dd3675, #b44593);
-
-    /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-    background: linear-gradient(to right, #ee7724, #d8363a, #dd3675, #b44593);
+.divider:after,
+.divider:before {
+    content: "";
+    flex: 1;
+    height: 1px;
+    background: #eee;
 }
-
-@media (min-width: 768px) {
-    .gradient-form {
-        height: 100vh !important;
-    }
+.h-custom {
+    height: calc(100% - 73px);
 }
-@media (min-width: 769px) {
-    .gradient-custom-2 {
-        border-top-right-radius: .3rem;
-        border-bottom-right-radius: .3rem;
+@media (max-width: 450px) {
+    .h-custom {
+        height: 100%;
     }
 }
